--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
